--- a/.github/workflows/build_exe_and_release.yml
+++ b/.github/workflows/build_exe_and_release.yml
@@ -22,7 +22,7 @@ jobs:
           python -m pip install pyinstaller
           python -m pip install -r requirements.txt
       - name: Build EXE
-        run: pyinstaller --onefile search_excel_files.py          
+        run: pyinstaller --onefile --icon=Cecil.ico search_excel_files.py          
       - name: Move Executable
         run: move dist/search_excel_files.exe CECIL.exe
       - name: Create Release
